--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>MySurface App - Landing Page</title>
+    <title>Distributed Applications Boot Camp</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/bootstrap.min.css" type="text/css" />    
     <link rel="stylesheet" href="./css/m-buttons.min.css" type="text/css" />   
@@ -13,7 +13,7 @@
     <div class="navbar">
         <div class="navbar-inner">
             <div class="container">            
-                <a href="/" class="brand">MySurfaceApp <i class="m-icon-big-win8"></i></a>       
+                <a href="/" class="brand">Distributed Applications BootCamp</a>       
                 <ul class="nav">
                     <li class="active"><a href="#">Home </a></li>
                     <li><a href="#">Support</a></li>
@@ -27,7 +27,7 @@
         <div class="container">    
             <div class="row">
                 <div class="span4">
-                    <h3>Landing pages with MySurfaceApp</h3>               
+                    <h3>Distributed Applications BootCamp</h3>               
                     <p>Tell your users a little more about what your product or software app does specifically right here.</p>   
                     <p>Give them
                     a brief overview of how <strong>YourApp</strong> can benefit them.</p>             
@@ -38,7 +38,7 @@
                     </div>
                 </div>
                 <div class="offset1 span7 center">        
-                    <img src="./img/WindowsSurfaceTablet.png" alt="surfacetablet"/>
+                    <img src="./img/readify_logo.png" alt="surfacetablet"/>
                
                 </div>
             </div>       
