dumped all the text in

--- a/index.html
+++ b/index.html
@@ -27,12 +27,15 @@
         <div class="container">    
             <div class="row">
                 <div class="span4">
-                    <h3>Distributed Applications BootCamp</h3>               
-                    <p>Tell your users a little more about what your product or software app does specifically right here.</p>   
-                    <p>Give them
-                    a brief overview of how <strong>YourApp</strong> can benefit them.</p>             
+                    <h3>Distributed Applications BootCamp - From Concept to Production</h3>  
+					
+                    <p>Microservices, SOA, Distributed Architectures, all fuzzy terms with ambiguous definitions. While you may know you need them to some degree, the questions of &quot;what does it look like?&quot; and &quot;how do we get started?&quot; are giant hurdles..</p>   
+                    <p>Duration : 5 Days
+Requirements : Azure subscription, Visual Studio
+Outcome : A distributed app running in the cloud
+</p>             
                     <div class="action-button">
-                        <a class="m-btn big blue rnd" href="#">Get on Windows Store <i class="m-icon-big-win8 m-icon-white"></i></a>                
+                        <a class="m-btn big blue rnd" href="#">Register to attend</a>                
                         <p class="btn-notes">Also available in iOS and Android · Desktop versions are available for 
                         <a href="#">Mac OS</a> and <a href="#">Windows</a></p>       
                     </div>
@@ -70,8 +73,17 @@
                     <article class="offset1 span5">                    
                         <h3>Microsoft Surface PSD Templates</h3>                    
                         <p>
-                            <strong>MySurfaceApp</strong> also includes 1666x1250pixels PSD Templates for the Microsoft Surface tablet line.
-                            Just drop in your screens in the "Screen" layer, and you're all set.
+                            You will need : You'll need to bring to the week :
+	1. A laptop running Windows 7 or 8 with Visual Studio 2013
+	2. An Azure subscription
+	3. An account with a Git source hosting service (Visual Studio Online, Github, BitBucket etc)
+	4. A real world business scale or integration problem to solve
+	
+You will take away :
+
+Running code!
+By the end of the week you'll have a distributed application running in the cloud which you can take back to your organisation and keep iterating on. You'll also gain experience with automated deployment tools, Git, unit testing techniques and a working knowledge of architecture patterns you can use.
+
                         </p>                    
                     </article> 
                     <div class="span5">
@@ -80,7 +92,7 @@
                 </div>      
                 <div class="row feature-row">
                     <article class="offset1 span5">
-                        <h3>CSS3 Microsoft Modern Buttons</h3>                    
+                        <h3>About the Speakers</h3>                    
                         <p>
                             Also included are <strong>Ace Subido's CSS3 Microsoft Modern Buttons</strong> (yours truly). 
                             A lightweight CSS/JS library that helps you recreate those buttons Microsoft uses on their websites.
@@ -95,7 +107,7 @@
                 </div>
                 <div class="row feature-row">
                     <article class="offset1 span5">                    
-                        <h3>Windows 8 Icon</h3>                    
+                        <h3>About Readify</h3>                    
                         <p>
                             Along with the <strong>CSS3 Microsoft Modern Buttons</strong>, the Windows 8 Icon is also included with
                             the swap-arrow icons. To use it, just use <strong>&lt;i class='m-icon-big-win8'>&lt;/i></strong> for the dark
