moving the text

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 <div class="span4">
                     <h3>Distributed Applications BootCamp - From Concept to Production</h3>  
                     <p>5 Days. Running code</p>
+                    <p>Making sense of Microservices and putting them into practice.</p>
 
                     
                 </div>
@@ -48,11 +49,11 @@
             <article class="span12">
                 <br />
                 <h3>Demystify Microservice architecture and have your apps running in the cloud in a week.</h3>
-                                    <p>Microservices, SOA, Distributed Architectures, all fuzzy terms with ambiguous definitions. While you may know you need them to some degree, the questions of &quot;what does it look like?&quot; and &quot;how do we get started?&quot; are giant hurdles..</p>   
-                    <p>Duration : 5 Days
-Requirements : Azure subscription, Visual Studio
-Outcome : A distributed app running in the cloud
-</p>                          
+                <p>Microservices, SOA, Distributed Architectures, all fuzzy terms with ambiguous definitions. While you may know you need them to some degree, the questions of &quot;what does it look like?&quot; and &quot;how do we get started?&quot; are giant hurdles..</p>   
+                <p>In this 5 day, hands on course, we'll help you take your business problem and turn it into a distributed application running in the cloud.</p>
+                <p>Readify instructors Damian Maclennan and Andrew Harcourt will teach the principles of microservice architectures and </p>
+
+                
                         <p>
                             You will need : You'll need to bring to the week :
                             <ol>
