--- a/index.html
+++ b/index.html
@@ -84,25 +84,10 @@ By the end of the week you'll have a distributed application running in the clou
             <div class="span12 white-box">
                 <div class="row box-title">
                     <article class="span12">
-                        <h3>Tell them more about the features of your <br /> product with this showcase box.</h3>                           
+                        <h3>About the instructors.</h3>                           
                     </article>            
                 </div>      
                 
-
-
-                <div class="row">
-                    <article class="offset1 span5">
-                        <h3>Andrew Harcourt</h3>                    
-                        <p>
-                            Andrew Harcourt is a solutions architect and software engineer with extensive experience in large-scale, high-load, geographically-distributed systems. Andrew specialises in project rescue, governance and development methodologies. Andrew's main areas of interest are domain-driven design, event sourcing, massively-scalable service architectures and cloud computing. <br>
-              Andrew is a regular speaker and presenter at conferences and training events. Andrew's mother wrote COBOL on punch cards, and Andrew has been coding in one form or another since he was five years old.
-                        </p>  
-                    </article>
-                    <div class="span5 center">
-                        <img src="./img/andrew-harcourt.png" border="0" alt="Andrew Harcourt Photo">
-                    </div>
-                </div>
-
 
                 <div class="row">
                     <article class="offset1 span5">
@@ -119,7 +104,18 @@ Damian's core technical skills are focused around architecting web and server si
                 </div>
 
 
-
+                <div class="row">
+                    <article class="offset1 span5">
+                        <h3>Andrew Harcourt</h3>                    
+                        <p>
+                            Andrew Harcourt is a solutions architect and software engineer with extensive experience in large-scale, high-load, geographically-distributed systems. Andrew specialises in project rescue, governance and development methodologies. Andrew's main areas of interest are domain-driven design, event sourcing, massively-scalable service architectures and cloud computing. <br>
+              Andrew is a regular speaker and presenter at conferences and training events. Andrew's mother wrote COBOL on punch cards, and Andrew has been coding in one form or another since he was five years old.
+                        </p>  
+                    </article>
+                    <div class="span5 center">
+                        <img src="./img/andrew-harcourt.png" border="0" alt="Andrew Harcourt Photo">
+                    </div>
+                </div>
 
 
                 <div class="row feature-row">
